k8s/express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: express-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            component: express
    template:
        metadata:
            labels:
                component: express
        spec:
            containers:
                - name: express
                  image: lyugaloki/ui-elements-express
                  ports:
                    - containerPort: 3000
