k8s/express-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: express-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: express
    ports:
        - port: 3000
          targetPort: 3000
